--- a/index.html
+++ b/index.html
@@ -23,41 +23,36 @@
             <div class="bookmarks">
                 <div class="category">
                     <div class="links">
-                        <li class="title">work</li>
+                        <li class="title">misc</li>
                         <li><a href="https://gmail.com">gmail</a></li>
-                        <li><a href="https://outlook.office.com">outlook</a></li>
-                        <li><a href="https://linkedin.com">linkedin</a></li>
-                        <li><a href="https://vim.rtorr.com/">vim</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
-                        <li class="title">dev</li>
+                        <li class="title">dev/lnx</li>
                         <li><a href="https://github.com/">github</a></li>
-                        <li><a href="https://lobste.rs/">lobste.rs</a></li>
+                        <li><a href="https://aur.archlinux.org/">aur</a></li>
                         <li><a href="https://mankier.com/">mankier</a></li>
-                        <li><a href="https://devdocs.io/">devdocs</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
-                        <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
-                        <li><a href="https://reddit.com/r/programming/">programming</a></li>
-                        <li><a href="https://reddit.com/r/selfhosted/">selfhosted</a></li>
-                        <li><a href="https://reddit.com/r/unixporn/">unixporn</a></li>
-                        <li><a href="https://reddit.com/r/mechanicalkeyboards/">mk</a></li>
+                        <li class="title">musik</li>
+                        <li><a href="https://rateyourmusic.com/">rym</a></li>
+                        <li><a href="https://metal-archives.com/">ma</a></li>
+                        <li><a href="https://www.last.fm/user/rsltm">lfm</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
                         <li class="title">play</li>
-                        <li><a href="https://monkeytype.com/">monkeytype</a></li>
                         <li><a href="https://youtube.com/">youtube</a></li>
-                        <li><a href="https://twitch.tv/">twitch</a></li>
-                        <li><a href="https://netflix.com/">netflix</a></li>
+                        <li><a href="https://fmhy.net/">fmhy</a></li>
+                        <li><a href="https://1337x.to/">1337x</a></li>
+                        <li><a href="https://ext.to/">ext.to</a></li>
                     </div>
                 </div>
             </div>
